# finalproject_zimakosov_m25-555

./: .gitignore  Makefile  README.md  demo_full.cast  main.py  pyproject.toml
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
